<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgTaco"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/taco" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/border_style"
                        android:text="@string/txtSize"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/rgSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rbLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/rbLarge" />

                        <RadioButton
                            android:id="@+id/rbMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rbMedium" />
                    </RadioGroup>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTortilla"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/border_style"
                        android:text="@string/txtTortilla"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/rgTortilla"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/rbCorn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/rbCorn" />

                        <RadioButton
                            android:id="@+id/rbFlour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rbFlour" />
                    </RadioGroup>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txtFillings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/border_style"
            android:text="@string/txtFillings"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cbChicken"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbChicken" />

                    <CheckBox
                        android:id="@+id/cbBeef"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbBeef" />

                    <CheckBox
                        android:id="@+id/cbWhiteFish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbWhiteFish" />

                    <CheckBox
                        android:id="@+id/cbCheese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbCheese" />

                    <CheckBox
                        android:id="@+id/cbSeaFood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbSeaFood" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cbPicodeGallo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbPicodeGallo" />

                    <CheckBox
                        android:id="@+id/cbBeans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbBeans" />

                    <CheckBox
                        android:id="@+id/cbRice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbRice" />

                    <CheckBox
                        android:id="@+id/cbLBT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbLBT" />

                    <CheckBox
                        android:id="@+id/cbGuacamole"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbGuacamole" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtBeverage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/border_style"
            android:text="@string/txtBeverage"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cbSoda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbSoda" />

                    <CheckBox
                        android:id="@+id/cbCerveza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbCerveza" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cbMargarita"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbMargarita" />

                    <CheckBox
                        android:id="@+id/cbTequila"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cbTequila" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnPlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#307CBE"
            android:text="@string/btnPlaceOrder"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</ScrollView>